2003-05-27  Bastien Nocera  <hadess@hadess.net>

	* data/totem.schemas.in: s/Wether/Whether/ (Closes: #113833)
	Thanks Menthos

2003-05-27  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/cd-drive.c: (get_scsi_units), (linux_scan), (freebsd_scan),
	(scan_for_cdroms): freebsd support and memory corruption fix
	(synced from libbacon)

2003-05-26  Bastien Nocera  <hadess@hadess.net>

	* README: updated
	* data/totem.schemas.in:
	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_instance_init): Add the /apps/totem/debug entry
	to enable debug in the playback engine

2003-05-25  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* src/gtk-playlist.c: (gtk_playlist_add_asf_playlist),
	(gtk_playlist_add_asf), (gtk_playlist_add_mrl_with_data),
	(gtk_playlist_add_mrl): treat video/x-ms-wmv and video/x-ms-wvx
	specially, implement mmsh redirections (Closes: #109952)

2003-05-25  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-playlist.c: (gtk_playlist_add_m3u),
	(gtk_playlist_add_asf_playlist), (gtk_playlist_add_pls),
	(gtk_playlist_add_asx), (gtk_playlist_add_ra),
	(gtk_playlist_add_smil), (gtk_playlist_add_desktop),
	(gtk_playlist_add_directory), (gtk_playlist_add_mrl_with_data),
	(gtk_playlist_add_mrl): only check for playlist and "playlist/video"
	types and add the other types straight away, it will bug the user
	when they add stuff that's not files to it, makes loading files in the
	playlist a lot faster as well

2003-05-23  Bastien Nocera  <hadess@hadess.net>

	* configure.in: added dependency on gconf for the xine backend
	* src/bacon-video-widget-xine.c: (setup_config): set the proxy
	settings in xine with the gnome settings
	* src/totem-preferences.c: (visual_quality_menu_changed): actually
	set the quality when we popup the menu
	* src/totem.c: (totem_action_fullscreen_toggle): inform the video
	widget that we're switching to fullscreen

2003-05-22  Bastien Nocera  <hadess@hadess.net>

	* README: updated