@@ -10,6 +10,7 @@ News
 ====
 
 0.99.0:
+* Added support for error messages coming from the xine engine itself
 * Fixed playbacks of DVDs and other media in the movie menu
 * Speed up playlist loading
 * Worked around a bug in egg-recent that would add a '/' to local filenames
@@ -23,7 +24,8 @@ News
 * Make the visual quality option menu actually work
 * Add the /apps/totem/debug entry to enable debug in the playback engine
 * Fixes concerning the colliding error and buffering dialogs
-* added a --disable-lirc argument to configure
+* Added a --disable-lirc argument to configure
+* Fix handling of Recent Files and URIs
 
 0.98.0:
 * Added the Vanity webcam utility
